fixed bg z-index

--- a/assets/scss/_component.background.scss
+++ b/assets/scss/_component.background.scss
@@ -5,5 +5,5 @@
 	right: 0;
 	bottom: 0;
 	position: fixed;
-	z-index: 0;
+	z-index: -5;
 }
